Stable version of dht and fixing some bugs